scrollbar fix

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
     padding: 0;
 }
+
+
+
 .photo-gallery {
     color: #313437;
     background-color: #f1fde1;
@@ -16,12 +19,12 @@ body{
 
 .gallery-Main{
     background-color: #90d1bf;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    /* padding-top: 2%;
+    padding-bottom: 2%; */
     text-align: center;
     color: #333;
     text-shadow: 2px 2px grey;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 .photo-gallery h2 {
     font-weight: bold;
@@ -30,7 +33,7 @@ body{
     color: inherit;
 }
 .row{
-    padding: 2%;
+    padding: 0;
     margin: 0;
 }
 
@@ -50,7 +53,7 @@ body{
 .photo-gallery .intro {
     font-size: 16px;
     max-width: 500px;
-    margin: 0 auto 40px;
+    margin: 0;
 }
 
 .photo-gallery .intro p {
